Level Editor: Simple top-down style play test mode added.
TileMap:
Can check collision for red and blue rectangles.

Images2D:
A new constructor that can specify if the image should be loaded as a
resource, from inside jar file. Image2D(path, useRecourceLoading)

-----Bug fixes----

Rectangle:
There was a bug when checking collision with bottom left corner of an
other rectangle.

--- a/Arget2DCore/Todo.txt
+++ b/Arget2DCore/Todo.txt
@@ -4,12 +4,24 @@ LevelEditor:
 : Draw solid rectangle, solid from top //BLUE
 : Map tiles to rectangles from image, makes the largest rectangle //RED, BLUE IMAGE
 : Edit rectangles: drag corners, delete.
-: Eraser button 
+: Eraser button
+* Test play button -> Disables all editor logic handles simple sideScroller movement of square.
+: Top-down movement test play option.
+* Top-down restricted tile movement.
+* Save / Load TileMap.
+: Fix bug when erasing blue rectangles. Removes extra rectangles. SOLVED: had forgot to do the same thing for blueRectangles as for Red.
 * Combine rectangles that are side by side.
+
+TileMap:
+: Should it handle/check collision? How is blue and red rectangles handled? (Blue: solid from top. Red: full solid). 
+* Load from file
 
 Renderer2D:
 : Don't loop through pixels that are renderer outside of buffer. Handles camera also.
 : Improves performance for larger images and rectangles.
 
 Image2D:
-* able to load images that are builded with program without needing "res" folder next to jar.
+: able to load images that are builded with program without needing "res" folder next to jar.
+
+Rectangle:
+: Collision bug. checked bottom left corner of "other"-rectangle wrongly. accidentally checked (other.y + other.width -1) instead of (other.y + other.height -1)
