--- a/Arget2DCore/Todo.txt
+++ b/Arget2DCore/Todo.txt
@@ -8,8 +8,10 @@ LevelEditor:
 * Test play button -> Disables all editor logic handles simple sideScroller movement of square.
 : Top-down movement test play option.
 * Top-down restricted tile movement.
-* Save / Load TileMap.
+: Save / Load TileMap.
 : Fix bug when erasing blue rectangles. Removes extra rectangles. SOLVED: had forgot to do the same thing for blueRectangles as for Red.
+* Layers
+* Separate entity layer or are they just as any other?
 * Combine rectangles that are side by side.
 
 TileMap:
@@ -25,3 +27,6 @@ Image2D:
 
 Rectangle:
 : Collision bug. checked bottom left corner of "other"-rectangle wrongly. accidentally checked (other.y + other.width -1) instead of (other.y + other.height -1)
+
+Gameloop:
+:QuickFix: Bug - Loop speeds up if after frame drop.
