--- a/Arget2DCore/Todo.txt
+++ b/Arget2DCore/Todo.txt
@@ -1,3 +1,7 @@
+
+* active
+: completed
+
 LevelEditor:
 
 : Draw solid rectangle //RED
@@ -13,6 +17,11 @@ LevelEditor:
 : Fix bug when erasing blue rectangles. Removes extra rectangles. SOLVED: had forgot to do the same thing for blueRectangles as for Red.
 * Layers:
 : Separate entity layer similar to tilemap, and save in the same file after the tilemap data.
+* Copy tile/entity under mouse from key binding/ middle mouse click.
+* Fill tool.
+* Paint multiple tiles option.
+* Bug: Eraser doesn't work on entities.
+* Idea: Define extra data for entities. (is boss, text, hostile etc.)
 //* Combine rectangles that are side by side.
 
 TileMap:
