--- a/RoadTo5/todo
+++ b/RoadTo5/todo
@@ -14,6 +14,7 @@ To be implemented:
 * Powerups / pickups.
 * Campaign menu.
 * More decorative tiles: wall, windows.
+* Line of sight for entities/bosses/player. "Fog of war?"
 
 Ideas:
 * Puzzles, pickups/powers that interact with surrounding.
