--- a/RoadTo5/todo
+++ b/RoadTo5/todo
@@ -11,7 +11,7 @@ To be implemented:
 * More bosses.
 * More levels.
 * Options menu. control master sound.
-* Powerups / pickups.
+* Powerups / pickups. -> Add buff. Permanent or over time.
 * Campaign menu.
 * More decorative tiles: wall, windows.
 * Line of sight for entities/bosses/player. "Fog of war?"
