--- a/Arget2DCore/Todo.txt
+++ b/Arget2DCore/Todo.txt
@@ -17,12 +17,15 @@ LevelEditor:
 : Fix bug when erasing blue rectangles. Removes extra rectangles. SOLVED: had forgot to do the same thing for blueRectangles as for Red.
 * Layers:
 : Separate entity layer similar to tilemap, and save in the same file after the tilemap data.
-* Copy tile/entity under mouse from key binding/ middle mouse click.
-* Fill tool.
+: Copy tile/entity under mouse from key binding/ middle mouse click. CTRL + mouseclick -> grab sprite:
+: Display active tile.
+: Fill tool.
+* Disable/Enable AutoSolid
 * Paint multiple tiles option.
 : FIXED! Bug: Eraser doesn't work on entities. //didn't work for entities because it checked the tiles array and not the entities array.
 * Idea: Define extra data for entities. (is boss, text, hostile etc.)
 //* Combine rectangles that are side by side.
+: Ask before overwriting file.
 
 TileMap:
 : Should it handle/check collision? How is blue and red rectangles handled? (Blue: solid from top. Red: full solid). 
